--- a/about.html
+++ b/about.html
@@ -478,13 +478,16 @@
                                     <div class="team__member__icon">
                                         <ul>
                                             <li>
-                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-facebook"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i
+                                                        class="icofont-facebook"></i></a>
                                             </li>
                                             <li>
-                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-twitter"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i
+                                                        class="icofont-twitter"></i></a>
                                             </li>
                                             <li>
-                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-skype"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i
+                                                        class="icofont-skype"></i></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -506,13 +509,16 @@
                                     <div class="team__member__icon">
                                         <ul>
                                             <li>
-                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-facebook"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i
+                                                        class="icofont-facebook"></i></a>
                                             </li>
                                             <li>
-                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-twitter"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i
+                                                        class="icofont-twitter"></i></a>
                                             </li>
                                             <li>
-                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-skype"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i
+                                                        class="icofont-skype"></i></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -814,14 +820,15 @@
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="blog-details.html">A BEGINNER 'S GUIDE...</a></h6>
+                                <h6><a href="what-is-mobile-application-development">What is Mobile APP Development?</a>
+                                </h6>
                             </div>
                             <div class="blog__4__text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt.</p>
+                                <p>Mobile application development is the process of designing, developing..</p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="blog-details.html">READ MORE</a>
+                                <a class="default__button btn__black" href="what-is-mobile-application-development">READ
+                                    MORE</a>
                             </div>
                         </div>
                     </div>
@@ -834,14 +841,13 @@
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="blog-details.html">A BEGINNER 'S GUIDE...</a></h6>
+                                <h6><a href="web-development-services">What is Web Development?</a></h6>
                             </div>
                             <div class="blog__4__text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt.</p>
+                                <p>Web development is the process of creating and maintaining websites...</p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="blog-details.html">READ MORE</a>
+                                <a class="default__button btn__black" href="web-development-services">READ MORE</a>
                             </div>
                         </div>
                     </div>
