--- a/about.html
+++ b/about.html
@@ -801,11 +801,11 @@
                                 <h3>IN-DEPTH ANALYSIS AND DISCUSSION</h3>
                             </div>
                             <div class="blog__4__section__title__text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore.</p>
+                                <p>Check out our software development blog to know more about software Company, new
+                                    trends and business management ideas.</p>
                             </div>
                             <div class="section__title__button">
-                                <a class="default__button" href="#">VIEW ARCHIVE POST</a>
+                                <a class="default__button" href="blog">VIEW ARCHIVE POST</a>
                             </div>
 
                         </div>
@@ -814,10 +814,10 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1800">
                         <div class="blog__4__single blog__3__single single__transform">
                             <div class="blog__4__img">
-                                <img src="assets/img/blog/blog__7.png" alt="">
+                                <img src="assets/img/blog/app-blog.png" alt="image">
                             </div>
                             <div class="blog__4__time">
-                                <p><span class="text__gradient ">08 May, 2024</span></p>
+                                <p><span class="text__gradient">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
                                 <h6><a href="what-is-mobile-application-development">What is Mobile APP Development?</a>
@@ -835,7 +835,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2100">
                         <div class="blog__4__single blog__3__single single__transform">
                             <div class="blog__4__img">
-                                <img src="assets/img/blog/blog__8.png" alt="">
+                                <img src="assets/img/blog/Web-blog.png" alt="image">
                             </div>
                             <div class="blog__4__time">
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
