--- a/team.html
+++ b/team.html
@@ -340,7 +340,7 @@
                                     <img src="assets/img/team/Ahmad.png" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details">Mr. Ahmad</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Ahmad</a></h6>
                                     <p>Founder & CEO</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -371,7 +371,7 @@
                                     <img src="assets/img/team/tahir.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details">Mr. Tahir</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Tahir</a></h6>
                                     <p>Co-Founder</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -402,7 +402,7 @@
                                     <img src="assets/img/team/Butt.jpeg" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details">Mr. Nadeem Butt</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Nadeem Butt</a></h6>
                                     <p>Mobile Application</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -432,7 +432,7 @@
                                     <img src="assets/img/team/Abdul Rahman.png" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details">Mr. Abdul Rahman</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Abdul Rahman</a></h6>
                                     <p>React Js (UI/UX Designer)</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -463,7 +463,7 @@
                                     <img src="assets/img/team/awaisoffice.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details">Mr. Awais</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Awais</a></h6>
                                     <p>Laravel Developer</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -494,7 +494,7 @@
                                     <img src="assets/img/team/hamid.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details">Mr. Hamid Raza</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Hamid Raza</a></h6>
                                     <p>Web Development</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -524,7 +524,7 @@
                                     <img src="assets/img/team/saif.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details">Mr. Saif Rahman</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Saif Rahman</a></h6>
                                     <p>Digital Marketing</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -554,7 +554,7 @@
                                     <img src="assets/img/team/awaisraza.jpg" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details">Mr. Awais</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Awais</a></h6>
                                     <p>Search Engine Optimization</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -585,7 +585,7 @@
                                     <img src="assets/img/team/Shoaib.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Shoaib Jamil</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Shoaib Jamil</a></h6>
                                     <p>Graphic Designer</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -616,7 +616,7 @@
                                     <img src="assets/img/service/Kashif.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Kashif</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Kashif</a></h6>
                                     <p>Social Media Manager</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -646,7 +646,7 @@
                                     <img src="assets/img/service/awais.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Awais</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Awais</a></h6>
                                     <p>Digital Marketing</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -677,7 +677,7 @@
                                     <img src="assets/img/team/Shoaib.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Shoaib Jamil</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Shoaib Jamil</a></h6>
                                     <p>Graphic Designer</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -708,7 +708,7 @@
                                     <img src="assets/img/team/saif-content.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details">Mr. Saif</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Saif</a></h6>
                                     <p>Content Creator</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -739,7 +739,7 @@
                                     <img src="assets/img/service/Mr-Saim.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details">Mr. Saim</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Saim</a></h6>
                                     <p>Worldpress Developer</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -769,7 +769,7 @@
                                     <img src="assets/img/service/Waleed.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details">Mr. Waleed</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Waleed</a></h6>
                                     <p>IT Specialist</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -823,7 +823,7 @@
                                 <p>Check out our software development blog to know more about software Company, new trends and business management ideas.</p>
                             </div>
                             <div class="section__title__button">
-                                <a class="default__button" href="project">VIEW ARCHIVE POST</a>
+                                <a class="default__button" href="blog">VIEW ARCHIVE POST</a>
                             </div>
 
                         </div>
@@ -832,27 +832,27 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1800">
                         <div class="blog__4__single blog__3__single single__transform">
                             <div class="blog__4__img">
-                                <img src="assets/img/blog/UIUX.png" alt="">
+                                <img src="assets/img/blog/app-blog.png" alt="image">
                             </div>
                             <div class="blog__4__time">
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="ui-ux-design">What is Mobile APP Development?</a></h6>
+                                <h6><a href="what-is-mobile-application-development">What is Mobile APP Development?</a></h6>
                             </div>
                             <div class="blog__4__text">
                                 <p>Mobile application development is the process of designing, developing..
                                 </p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="ui-ux-design">READ MORE</a>
+                                <a class="default__button btn__black" href="what-is-mobile-application-development">READ MORE</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2100">
                         <div class="blog__4__single blog__3__single single__transform">
                             <div class="blog__4__img">
-                                <img src="assets/img/blog/web.png" alt="">
+                                <img src="assets/img/blog/Web-blog.png" alt="image">
                             </div>
                             <div class="blog__4__time">
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
