--- a/blog.html
+++ b/blog.html
@@ -226,8 +226,8 @@
                             <span class="visually-hidden">Offcanvas Menu Open</span>
                         </a>
                     </div>
-                  
-                    
+
+
 
 
 
@@ -356,7 +356,6 @@
                                 </div>
 
                             </div>
-
                             <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="1500">
 
                                 <div class="sidebar__title">
@@ -365,41 +364,69 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="blog-details">Strategic Planning
+                                            <a class="sidebar__common__input" href="web-development-services">Web
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="blog-details">Market Entry Strategy
+                                            <a class="sidebar__common__input"
+                                                href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="blog-details">Business Process
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App
+                                                Development
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="blog-details">Financial Restructuring
+                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital
+                                                Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="blog-details">Cost Reduction Analysis
+                                            <a class="sidebar__common__input"
+                                                href="wordpress-development-services">WordPress
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="blog-details">Supply Chain Optimization
+                                            <a class="sidebar__common__input" href="ui-ux-design">UI/UX Design
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="game-development-services">Game
+                                                Development
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="seo-services">SEO Specialist
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="content-creater">Content creator
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="network-services">IT Specialists
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+
                                     </ul>
                                 </div>
 
@@ -414,24 +441,26 @@
                                 <div class="sidebar__post">
                                     <ul>
                                         <li>
-                                            <a href="blog-details">
+                                            <a href="what-is-web-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/blog__small__1.png" alt="">
+                                                    <img src="assets/img/blog/Web-blog.png" alt="img"
+                                                        style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
-                                                    <h6>Sodales neque sodales and etiam nulla magna</h6>
+                                                    <h6>What is Web Development</h6>
                                                     <span class="text__gradient">02 June, 2024</span>
                                                 </div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="blog-details">
+                                            <a href="what-is-mobile-application-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/blog__small__2.png" alt="">
+                                                    <img src="assets/img/blog/app-blog.png" alt="img"
+                                                        style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
-                                                    <h6>Sodales neque sodales and etiam nulla magna</h6>
+                                                    <h6>What is Mobile App Development</h6>
                                                     <span class="text__gradient">02 June, 2024</span>
                                                 </div>
                                             </a>
@@ -439,12 +468,13 @@
 
 
                                         <li>
-                                            <a href="blog-details">
+                                            <a href="what-is-software-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/blog__small__3.png" alt="">
+                                                    <img src="assets/img/blog/Software.png" alt="img"
+                                                        style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
-                                                    <h6>Sodales neque sodales and etiam nulla magna</h6>
+                                                    <h6>Whats is Software Development</h6>
                                                     <span class="text__gradient">02 June, 2024</span>
                                                 </div>
                                             </a>
@@ -512,21 +542,22 @@
                                 data-aos-duration="1500">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/blog__9.png" alt="">
+                                        <img src="assets/img/blog/app-blog.png" alt="image">
                                     </div>
                                     <div class="blog__4__time">
-                                        <p class="bg__white"><span class="text__gradient ">08 May, 2024</span></p>
+                                        <p class="bg__white"><span class="text__gradient">08 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="blog-details">A BEGINNER 'S GUIDE...</a></h6>
+                                        <h6><a href="what-is-mobile-application-development">What is Mobile App
+                                                Development</a></h6>
                                     </div>
                                     <div class="blog__4__text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor
-                                            incididunt.</p>
+                                        <p>Mobile application development is the process of designing, developing and
+                                            programming software applications...</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button" href="blog-details">READ MORE</a>
+                                        <a class="default__button" href="what-is-mobile-application-development">READ
+                                            MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -534,21 +565,21 @@
                                 data-aos-duration="1700">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/blog__4.png" alt="">
+                                        <img src="assets/img/blog/Software.png" alt="image">
                                     </div>
                                     <div class="blog__4__time">
-                                        <p class="bg__white"><span class="text__gradient ">10 May, 2024</span></p>
+                                        <p class="bg__white"><span class="text__gradient">10 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="blog-details">A BEGINNER 'S GUIDE...</a></h6>
+                                        <h6><a href="what-is-software-development">Whats is Software Development</a>
+                                        </h6>
                                     </div>
                                     <div class="blog__4__text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor
-                                            incididunt.</p>
+                                        <p>Software development is the process of designing, creating, testing, and
+                                            maintaining software applications...</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button " href="blog-details">READ MORE</a>
+                                        <a class="default__button" href="what-is-software-development">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -557,25 +588,24 @@
                                 data-aos-duration="1900">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/blog__5.png" alt="">
+                                        <img src="assets/img/blog/Web-blog.png" alt="image">
                                     </div>
                                     <div class="blog__4__time">
-                                        <p class="bg__white"><span class="text__gradient ">11 May, 2024</span></p>
+                                        <p class="bg__white"><span class="text__gradient">11 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="blog-details">A BEGINNER 'S GUIDE...</a></h6>
+                                        <h6><a href="what-is-web-development">What is Web Development</a></h6>
                                     </div>
                                     <div class="blog__4__text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor
-                                            incididunt.</p>
+                                        <p>Web development is the process of creating, maintaining, and building
+                                            websites...</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button" href="blog-details">READ MORE</a>
+                                        <a class="default__button" href="what-is-web-development">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
+                            <!-- <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up"
                                 data-aos-duration="2100">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
@@ -641,7 +671,7 @@
                                         <a class="default__button " href="blog-details">READ MORE</a>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="pagination" data-aos="fade-up" data-aos-duration="1500">
                             <ul>
