--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,7 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                         <div class="blog__section__button text__end">
-                            <a class="default__button btn__blue" href="javascript:void(0);">ALL ARTICLES</a>
+                            <a class="default__button btn__blue" href="blog">ALL ARTICLES</a>
                         </div>
                     </div>
                 </div>
@@ -1422,7 +1422,7 @@
 
                     <div class="blog__single" data-aos="fade-up" data-aos-duration="1500">
                         <div class="blog__img">
-                            <img src="assets/img/blog/blog__1.png" alt="">
+                            <img src="assets/img/blog/app-blog.png" alt="">
                         </div>
                         <div class="blog__date">
                             <div class="blog__date__inner">
@@ -1451,7 +1451,7 @@
 
                     <div class="blog__single" data-aos="fade-up" data-aos-duration="1800">
                         <div class="blog__img">
-                            <img src="assets/img/blog/blog__2.png" alt="">
+                            <img src="assets/img/blog/Software.png" alt="">
                         </div>
                         <div class="blog__date">
                             <div class="blog__date__inner">
@@ -1480,7 +1480,7 @@
 
                     <div class="blog__single" data-aos="fade-up" data-aos-duration="2100">
                         <div class="blog__img">
-                            <img src="assets/img/blog/blog__3.png" alt="">
+                            <img src="assets/img/blog/Web-blog.png" alt="">
                         </div>
                         <div class="blog__date">
                             <div class="blog__date__inner">
