--- a/what-is-software-development.html
+++ b/what-is-software-development.html
@@ -442,24 +442,26 @@
                                 <div class="sidebar__post">
                                     <ul>
                                         <li>
-                                            <a href="javascript:void(0);">
+                                            <a href="what-is-web-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/blog__small__1.png" alt="">
+                                                    <img src="assets/img/blog/Web-blog.png" alt="img"
+                                                        style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
-                                                    <h6>What is Networking Solution?</h6>
+                                                    <h6>What is Web Development</h6>
                                                     <span class="text__gradient">02 June, 2024</span>
                                                 </div>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a href="javascript:void(0);">
+                                            <a href="what-is-mobile-application-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/blog__small__2.png" alt="">
+                                                    <img src="assets/img/blog/app-blog.png" alt="img"
+                                                        style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
-                                                    <h6>What is Software Development?</h6>
+                                                    <h6>What is Mobile App Development</h6>
                                                     <span class="text__gradient">02 June, 2024</span>
                                                 </div>
                                             </a>
@@ -467,12 +469,13 @@
 
 
                                         <li>
-                                            <a href="javascript:void(0);">
+                                            <a href="what-is-software-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/blog__small__3.png" alt="">
+                                                    <img src="assets/img/blog/Software.png" alt="img"
+                                                        style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
-                                                    <h6>Sodales neque sodales and etiam nulla magna</h6>
+                                                    <h6>Whats is Software Development</h6>
                                                     <span class="text__gradient">02 June, 2024</span>
                                                 </div>
                                             </a>
@@ -481,6 +484,7 @@
                                 </div>
 
                             </div>
+
 
                             <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="1500">
 
